--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.3"
   },
   "devDependencies": {
     "@capacitor/cli": "5.2.2",
