feat: news fetched and displayed

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-router-dom": "^5.3.3",
     "base-64": "^1.0.0",
     "ionicons": "^7.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
