--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-iframe": "^1.8.5",
     "react-redux": "^8.1.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
