--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
+    "react-lite-youtube-embed": "^2.3.52",
     "react-redux": "^8.1.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
