--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^8.1.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "react-youtube": "^10.1.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3"
   },
