--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "^5.2.2",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/push-notifications": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
