--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "base-64": "^1.0.0",
+    "cordova-plugin-ionic": "5.5.3",
     "ionicons": "^7.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
