--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-router-dom": "^5.3.4",
     "react-youtube": "^10.1.0",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.2.3"
+    "redux-saga": "^1.2.3",
+    "terser": "^5.19.2"
   },
   "devDependencies": {
     "@capacitor/cli": "5.2.2",
