feat: setup circleci

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -43,7 +43,7 @@
     <key>IonChannelName</key>
     <string>main</string>
     <key>IonUpdateMethod</key>
-    <string>auto</string>
+    <string>background</string>
     <key>IonMaxVersions</key>
     <string>2</string>
     <key>IonMinBackgroundDuration</key>
