--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/android": "^5.2.2",
+    "@capacitor/android": "^5.6.0",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.2.2",
+    "@capacitor/core": "^5.2.2",
     "@capacitor/haptics": "5.0.6",
-    "@capacitor/ios": "^5.2.2",
+    "@capacitor/ios": "^5.6.0",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/react": "^7.0.0",
@@ -42,7 +42,7 @@
     "terser": "^5.19.2"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.2.2",
+    "@capacitor/cli": "^5.2.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
