--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/ios": "^5.6.0",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic-native/deeplinks": "^5.36.0",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
     "@ionic/storage": "^4.0.0",
