--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   },
   "dependencies": {
     "@capacitor/android": "^5.6.0",
-    "@capacitor/app": "5.0.6",
-    "@capacitor/core": "^5.2.2",
+    "@capacitor/app": "^5.0.6",
+    "@capacitor/core": "^5.6.0",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "^5.6.0",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/share": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic-native/core": "^5.36.0",
     "@ionic-native/deeplinks": "^5.36.0",
     "@ionic/react": "^7.0.0",
+    "@ionic/react-hooks": "^0.0.8",
     "@ionic/react-router": "^7.0.0",
     "@ionic/storage": "^4.0.0",
     "@reduxjs/toolkit": "^1.9.5",
